# ultraviolet

./: .gitignore  Cargo.toml  GLOSSARY.md  LICENSE-MIT  README.md
cli/: Cargo.toml
cli/src/: main.rs
demo/: local.sh
docs/: compare.html  darknoise.html  index.html  taproot.html
guest/: Cargo.toml
guest/src/: main.rs
kernel/: Cargo.toml
kernel/src/: address.rs  channel.rs  hash.rs  hashlock.rs  history.rs  lib.rs  note.rs  nullifier.rs  receipt.rs  sig.rs  transfer.rs
prove/: Cargo.toml  build.rs
prove/src/: lib.rs
prover/: Cargo.toml
prover/src/: main.rs
spec/: 00-OVERVIEW.md  01-CRYPTO.md  02-NOTES.md  03-RECORDS.md  04-PROOFS.md  05-NETWORK.md  06-PAYMENTS.md  07-CHANNELS.md  08-CLIENT.md  09-INTEROP.md  10-COMPARISONS.md  11-SPEED-LAYER.md  99-OPEN-PROBLEMS.md
wallet/: Cargo.toml
wallet/src/: bundle.rs  chain.rs  envelope.rs  keys.rs  lib.rs  note.rs  transport.rs
